# daleel

./: .gitignore  CMakeLists.txt  README.md
Backend/: main.js  package-lock.json  package.json
OCR/: ai_ocr.py  main.py  ocr_pipeline.py  pdf_handler.py  postprocess.py  preprocess.py
include/CNN/: cnn_model_ziad.py
include/OCR/: preprocessing.cpp  preprocessing.h
include/chatbot/: chatbot.py  database.py  main.py
